--- a/views/index.pug
+++ b/views/index.pug
@@ -10,18 +10,28 @@ html
         h4 User Stories:
         blockquote
           ul
-            | 1) I can pass a string as a parameter, and it will check to see whether that string contains either a unix timestamp or a natural language date (example: January 1, 2018).
+            | 1) I can pass a string as a parameter, and it will check to see whether that string contains either a unix timestamp or a natural language date (example: 15th October 2017).
           ul
             | 2) If it does, it returns both the Unix timestamp and the natural language form of that date.
           ul
             | 3) If it does not contain a date or Unix timestamp, it returns null for those properties.
         h3 Example Usage
-        code https://YOUR-URL-PLEASE-CHANGE-IT.com/api/14th%20October,%202017
+        code https://fcc-timestamp-hemakshis.herokuapp.com/api/15th%20October,%202017
         br
-        code https://YOUR-URL-PLEASE-CHANGE-IT.com/api/1507939200
+        code https://fcc-timestamp-hemakshis.herokuapp.com/api/1508025600
         h3 Example Output
-        code {&quot;unix&quot;: 1507939200, &quot;natural&quot;: &quot;October 14, 2017&quot;}
+        code {&quot;unix&quot;: 1508025600, &quot;natural&quot;: &quot;15th October, 2017&quot;}
     footer.text-center &copy; Copyright Hemakshi Sachdev, 2017
+    ul.text-center
+      li
+        a(href='#')
+          i.fa.fa-github
+      li
+        a(href='#')
+          i.fa.fa-free-code-camp
+      li
+        a(href='#')
+          i.fa.fa-linkedin
       
 
         
