Some Basic changes in index.pug

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,6 +3,7 @@ html
   head
     title Timestamp Microservice
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
   body
     .container
       h1.text-center FCC API Basejump: Timestamp Microservice
@@ -22,7 +23,7 @@ html
         h3 Example Output
         code {&quot;unix&quot;: 1508025600, &quot;natural&quot;: &quot;15th October, 2017&quot;}
     footer.text-center &copy; Copyright Hemakshi Sachdev, 2017
-    ul.text-center
+    ul.text-center(style='text-decoration:none;')
       li
         a(href='#')
           i.fa.fa-github
