--- a/views/index.pug
+++ b/views/index.pug
@@ -23,7 +23,7 @@ html
         h3 Example Output
         code {&quot;unix&quot;: 1508025600, &quot;natural&quot;: &quot;15th October, 2017&quot;}
     footer.text-center &copy; Copyright Hemakshi Sachdev, 2017
-    ul.text-center(style='text-decoration:none;')
+    ul.text-center(style='text-decoration:none;display:inline-block;')
       li
         a(href='#')
           i.fa.fa-github
