Some Basic changes in index.pug

--- a/views/index.pug
+++ b/views/index.pug
@@ -23,14 +23,14 @@ html
         h3 Example Output
         code {&quot;unix&quot;: 1508025600, &quot;natural&quot;: &quot;15th October, 2017&quot;}
     footer.text-center &copy; Copyright Hemakshi Sachdev, 2017
-    ul.text-center(style='text-decoration:none;display:inline-block;')
-      li
+    ul.text-center
+      li(style='display:inline-block;')
         a(href='#')
           i.fa.fa-github
-      li
+      li(style='display:inline-block;')
         a(href='#')
           i.fa.fa-free-code-camp
-      li
+      li(style='display:inline-block;')
         a(href='#')
           i.fa.fa-linkedin
       
