Some Basic changes in index.pug

--- a/views/index.pug
+++ b/views/index.pug
@@ -24,13 +24,13 @@ html
         code {&quot;unix&quot;: 1508025600, &quot;natural&quot;: &quot;15th October, 2017&quot;}
     footer.text-center &copy; Copyright Hemakshi Sachdev, 2017
     ul.text-center
-      li(style='display:inline-block;')
+      li(style='display:inline-block;padding:1% 1.5% 1% 0%;')
         a(href='#')
           i.fa.fa-github
-      li(style='display:inline-block;')
+      li(style='display:inline-block;padding:1% 1.5% 1% 0%;')
         a(href='#')
           i.fa.fa-free-code-camp
-      li(style='display:inline-block;')
+      li(style='display:inline-block;padding:1% 1.5% 1% 0%;')
         a(href='#')
           i.fa.fa-linkedin
       
