A lot of small changes

--- a/views/index.pug
+++ b/views/index.pug
@@ -11,7 +11,7 @@ html
         h4 User Stories:
         blockquote
           ul
-            | 1) I can pass a string as a parameter, and it will check to see whether that string contains either a unix timestamp or a natural language date (example: 15th October 2017).
+            | 1) I can pass a string as a parameter, and it will check to see whether that string contains either a unix timestamp or a natural language date (example: 15th October, 2017).
           ul
             | 2) If it does, it returns both the Unix timestamp and the natural language form of that date.
           ul
@@ -25,13 +25,13 @@ html
     footer.text-center &copy; Copyright Hemakshi Sachdev, 2017
     ul.text-center
       li(style='display:inline-block;padding:1% 1.5% 1% 0%;')
-        a(href='#')
+        a(href='https://github.com/hemakshis')
           i.fa.fa-github
       li(style='display:inline-block;padding:1% 1.5% 1% 0%;')
-        a(href='#')
+        a(href='https://www.freecodecamp.org/hemakshis')
           i.fa.fa-free-code-camp
       li(style='display:inline-block;padding:1% 1.5% 1% 0%;')
-        a(href='#')
+        a(href='https://www.linkedin.com/in/hemakshi-sachdev-b41353103/')
           i.fa.fa-linkedin
       
 
