--- a/views/index.pug
+++ b/views/index.pug
@@ -17,9 +17,9 @@ html
           ul
             | 3) If it does not contain a date or Unix timestamp, it returns null for those properties.
         h3 Example Usage
-        code https://fcc-timestamp-hemakshis.herokuapp.com/api/15th%20October,%202017
+        code https://timestamp-hemakshis.herokuapp.com/api/15th%20October,%202017
         br
-        code https://fcc-timestamp-hemakshis.herokuapp.com/api/1508025600
+        code https://timestamp-hemakshis.herokuapp.com/api/1508025600
         h3 Example Output
         code {&quot;unix&quot;: 1508025600, &quot;natural&quot;: &quot;15th October, 2017&quot;}
     footer.text-center &copy; Copyright Hemakshi Sachdev, 2017
