--- a/views/index.pug
+++ b/views/index.pug
@@ -21,7 +21,7 @@ html
         br
         code https://timestamp-hemakshis.herokuapp.com/api/1508025600
         h3 Example Output
-        code {&quot;unix&quot;: 1508025600, &quot;natural&quot;: &quot;15th October, 2017&quot;}
+        code {&quot;unix&quot;: &quot;1508025600&quot;, &quot;natural&quot;: &quot;15th October, 2017&quot;}
     footer.text-center &copy; Copyright Hemakshi Sachdev, 2017
     ul.text-center
       li(style='display:inline-block;padding:1% 1.5% 1% 0%;')
