--- a/views/index.pug
+++ b/views/index.pug
@@ -22,7 +22,10 @@ html
         code https://timestamp-hemakshis.herokuapp.com/api/1508025600
         h3 Example Output
         code {&quot;unix&quot;: &quot;1508025600&quot;, &quot;natural&quot;: &quot;15th October, 2017&quot;}
-    footer.text-center &copy; Copyright Hemakshi Sachdev, 2017
+    footer.text-center
+      i.fa.fa-code.text-dark
+      |  By Hemakshi Sachdev, 2017 with 
+      i.fa.fa-heart.text-danger
     ul.text-center
       li(style='display:inline-block;padding:1% 1.5% 1% 0%;')
         a(href='https://github.com/hemakshis')
@@ -31,7 +34,7 @@ html
         a(href='https://www.freecodecamp.org/hemakshis')
           i.fa.fa-free-code-camp
       li(style='display:inline-block;padding:1% 1.5% 1% 0%;')
-        a(href='https://www.linkedin.com/in/hemakshi-sachdev-b41353103/')
+        a(href='https://www.linkedin.com/in/hemakshis')
           i.fa.fa-linkedin
       
 
